--- a/package.json
+++ b/package.json
@@ -25,18 +25,27 @@
     "release-bump": "yarn run generate-changelog-bump && yarn run release-android && yarn run release-ios"
   },
   "dependencies": {
+    "@aws-amplify/predictions": "^6.1.31",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-ml-kit/text-recognition": "^1.5.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/stack": "^6.3.27",
+    "add": "^2.0.6",
+    "aws-amplify": "^6.8.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
+    "image-hash": "^5.3.2",
     "lodash": "^4.17.21",
+    "lottie-react-native": "^7.1.0",
     "react": "^18.3.1",
     "react-native": "^0.76.1",
     "react-native-config": "^1.5.3",
     "react-native-device-info": "^14.0.0",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localization": "^2.3.2",
     "react-native-localize": "^3.3.0",
@@ -46,7 +55,8 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.3.0"
+    "redux-saga": "^1.3.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
