--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lottie-react-native": "^7.1.0",
     "react": "^18.3.1",
     "react-native": "^0.76.1",
+    "react-native-ble-plx": "^3.2.1",
     "react-native-config": "^1.5.3",
     "react-native-device-info": "^14.0.0",
     "react-native-gesture-handler": "^2.20.2",
